- Fixed problems with navbar and internationalization. - Created some divs with display:none just to change between pt and en when needed. That was necessary because the javascript for i18n give some error in navbar. When we changed the language the icons from navbar get invisible.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -41,6 +41,13 @@
 	margin-bottom:0;
 	max-height:42px; 
 }
+#navbar-rodape2{
+	margin-left:0px; 
+	margin-right:0px; 
+	margin-top: 0;
+	margin-bottom:0;
+	max-height:42px; 
+}
 
 #contato{
 	margin-top:-6px;
